# Project-Athena

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.claude/: launch.json
api/: Dockerfile  requirements.txt
api/athena_api/: __init__.py  ai.py  brief.py  data.py  main.py  nl.py
docs/: ai-orchestration.md  architecture.md  decision-framework.md  deployment.md  portfolio.md
orchestration/n8n/: workflow-1-on-demand-analysis.json  workflow-2-monthly-brief.json  workflow-3-daily-kpi-review.json
pipeline/: pyproject.toml
pipeline/athena/: __init__.py  cli.py  config.py  db.py  finance.py  forecast.py  generate.py  ingest.py  recommend.py  snapshot.py  warehouse.py
pipeline/athena/analytics/: __init__.py  engine.py
sql/: schema.sql
web/: .env.example  Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/ask/: route.ts
web/app/ask/: AskConsole.tsx  page.tsx
web/app/brief/: page.tsx
web/app/consulting/: GuidedMode.tsx  page.tsx
web/app/recommendations/: page.tsx
web/app/simulator/: page.tsx
web/app/skills/: page.tsx
web/app/start/: StartConsole.tsx  page.tsx
web/components/: CodePanel.tsx  KpiCard.tsx  Markdown.tsx  Masthead.tsx  NorthStar.tsx  RecommendationCard.tsx  Sidebar.tsx  Simulator.tsx  StatusBar.tsx  ThemeToggle.tsx  Ticker.tsx  TopNav.tsx  WordmarkFooter.tsx  charts.tsx  ui.tsx
web/data/: snapshot.json
web/lib/: brief.ts  db.ts  module.ts  moduleMeta.tsx  nl.ts  queries.ts  scenario.ts  snapshot.ts
web/lib/ai/: personas.ts  provider.ts
