[project]
name = "athena-pipeline"
version = "0.1.0"
description = "Athena decision-intelligence data pipeline: generate, ingest, warehouse, analyze, forecast, recommend."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "psycopg[binary]>=3.1",
    "statsmodels>=0.14",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.scripts]
athena = "athena.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["athena*"]
